# deep-research-agent

./: .gitignore  CLAUDE.md  README.md  plan.md
backend/: main.py  pyproject.toml  settings.py
backend/agent/: graph.py  state.py
backend/agent/nodes/: evaluator.py  formatter.py  planner.py  researcher.py  synthesizer.py
backend/agent/tools/: web_search.py  wikipedia.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/research/: route.ts
frontend/app/components/: ActivityLog.tsx  AgentProgress.tsx  QueryInput.tsx  ReportViewer.tsx
frontend/lib/: stream.ts  types.ts
